--- a/resources/assets/sass/partials/_editor-step.scss
+++ b/resources/assets/sass/partials/_editor-step.scss
@@ -28,7 +28,7 @@
   &.slide-next-leave-active, &.slide-prev-leave-active {
     transition: all 700ms ease-in-out;
   }
-  
+
   &.slide-next-enter,
   &.slide-next-leave-to,
   &.slide-prev-enter,
@@ -134,9 +134,12 @@
       position: absolute;
       left: 12px;
       top: 12px;
-      width: 24px;
+      width: 22px;
       height: 24px;
-      background-image: url('../img/UI/check-circle-gummy.svg');
+      background: {
+        image: url('../img/UI/check-circle-gummy.svg');
+        repeat: no-repeat;
+      }
       transform: translateX(-16px) scale(.5);
       transition: all 250ms cubic-bezier(0.240, 0.260, 0.245, 1.170);
       visibility: hidden;
