--- a/resources/assets/sass/pages/about.scss
+++ b/resources/assets/sass/pages/about.scss
@@ -6,10 +6,11 @@
 .revealer {
   position: absolute;
   bottom: 0px;
-  left: auto;
+  left: 0px;
   width: 100%;
   display: block;
   will-change: height;
+  padding: 0 $grid-gutter-width-base / 2;
 
   > ul {
     margin: 0;
@@ -46,7 +47,7 @@
 .revealer__clicker {
   position: absolute;
   bottom: 0%;
-  left: 0%;
+  left: auto;
   margin: 0;
   padding-top: 1rem;
   cursor: pointer;
