--- a/resources/assets/sass/mixins/_image.scss
+++ b/resources/assets/sass/mixins/_image.scss
@@ -15,6 +15,15 @@
   height: auto;
 }
 
+@mixin img-fill {
+  // Part 1: Set a maximum relative to the parent
+  width: 100%;
+  // Part 2: Override the height to auto, otherwise images will be stretched
+  // when setting a width and height attribute on the img element.
+  height: auto;
+}
+
+
 
 // Retina image
 //
