--- a/resources/assets/sass/components/_animations.scss
+++ b/resources/assets/sass/components/_animations.scss
@@ -5,11 +5,9 @@
     animation: {
       name: fade-in-up;
       duration: 1000ms;
-      fill-mode: backwards;
-      // timing-function: cubic-bezier(0.77, 0, 0.175, 1);
+      fill-mode: both;
       timing-function: cubic-bezier(.64,.25,.36,.96);
     }
-    opacity: 1;
   }
 }
 
@@ -23,7 +21,6 @@
       fill-mode: both;
       timing-function: cubic-bezier(.64,.25,.36,.96);
     }
-    opacity: 1;
   }
 }
 
@@ -37,7 +34,6 @@
       fill-mode: both;
       timing-function: cubic-bezier(.64,.25,.36,.96);
     }
-    opacity: 1;
   }
 }
 
@@ -55,21 +51,21 @@
 @keyframes fade-in-up {
   0% {
     opacity: 0;
-    transform: translateY(15%);
+    transform: translateY(32px);
   }
   100% {
     opacity: 1;
-    transform: translateY(0%);
+    transform: translateY(0px);
   }
 }
 
 @keyframes fade-in-down {
   0% {
     opacity: 0;
-    transform: translateY(-15%);
+    transform: translateY(-32px);
   }
   100% {
     opacity: 1;
-    transform: translateY(0%);
+    transform: translateY(0px);
   }
 }
