Menu - Logo is now an inline svg for styling purposes.

--- a/resources/assets/sass/partials/_menu.scss
+++ b/resources/assets/sass/partials/_menu.scss
@@ -22,16 +22,6 @@
   transition: all 650ms;
 }
 
-// .logo {
-
-//   z-index: $zindex-navbar + 1;
-//   margin-right: 15px;
-//   transition: all 650ms 450ms;
-
-//   &:hover {
-//     opacity: 1;
-// //   }
-// }
 
 .logo {
   display: inline-block;
@@ -41,23 +31,27 @@
 
   .logo-mark {
     display: inline-block;
-    height: 2.5rem;
     width: 2.25rem;
-    color: $gray-light;
 
-    background: {
-      image: url('/img/UI/logo-mark.svg');
-      position: center center;
-      size: auto 100%;
-      repeat: no-repeat;
+    svg {
+      height: 2.5rem;
+    }
+
+    .hand {
+      fill: $gray-lighter;
+    }
+
+    .accents {
+      fill: $jean-jacket;
+      opacity: 0;
     }
   }
 
   .logo-text {
     position: absolute;
     left: 2.5rem;
-    top: .125rem;
-    height: 1.6rem;
+    top: .25rem;
+    height: 1.25rem;
     width: 4.5rem;
     transition: all 350ms 0ms;
     pointer-events: none;
@@ -77,8 +71,13 @@
     text-decoration: none;
 
     .logo-mark {
-      background-image: url('/img/UI/logo-mark-color.svg');
-      color: $jean-jacket;
+      .hand {
+        fill: $gummy;
+      }
+
+      .accents {
+        opacity: 1;
+      }
     }
 
     .logo-text {
