--- a/resources/assets/sass/components/_modal.scss
+++ b/resources/assets/sass/components/_modal.scss
@@ -71,7 +71,7 @@ $modal-transition:            all 300ms 50ms cubic-bezier(0.240, 0.260, 0.245, 1
   &.modal-leave-active {
     transition: all 350ms;
 
-    &.fade .modal__dialog {
+    .modal__dialog {
       @include transition($modal-transition);
     }
   }
@@ -80,7 +80,7 @@ $modal-transition:            all 300ms 50ms cubic-bezier(0.240, 0.260, 0.245, 1
   &.modal-leave-to {
     background-color: rgba($modal-backdrop-bg, 0);
 
-    &.fade .modal__dialog {
+    .modal__dialog {
       transform: scale(.85);
       opacity: 0;
     }
