--- a/resources/assets/sass/components/components.scss
+++ b/resources/assets/sass/components/components.scss
@@ -43,7 +43,8 @@
 @import "loader";
 
 // Components w/ JavaScript
-@import "modal";
-@import "tooltip";
-@import "popover";
 @import "carousel";
+@import "checkbox-group";
+@import "modal";
+@import "popover";
+@import "tooltip";
