--- a/resources/assets/sass/pages/about.scss
+++ b/resources/assets/sass/pages/about.scss
@@ -1,7 +1,10 @@
 .about__intro {
   position: relative;
-  will-change: height;
 }
+
+//
+// Revealer
+//
 
 .revealer {
   position: absolute;
@@ -9,7 +12,6 @@
   left: 0px;
   width: 100%;
   display: block;
-  will-change: height;
   padding: 0 $grid-gutter-width-base / 2;
 
   > ul {
