--- a/resources/assets/sass/components/_images.scss
+++ b/resources/assets/sass/components/_images.scss
@@ -15,6 +15,10 @@ img.-fill {
   @include img-fill;
 }
 
+img.-rounded, video.-rounded {
+  border-radius: $border-radius;
+}
+
 
 // Image thumbnails
 .img-thumbnail {
