Custom text-highlight color

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -38,3 +38,6 @@ html {
 .menu-pad {
   padding-top: 160px;
 }
+
+::-moz-selection { background-color: rgba($lightning, .5)}
+::selection { background-color: rgba($lightning, .5) }
